--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	loading page background image: http://www.havocpoint.it/2016/03/civil-war-ii-lartista-coreano-kim-jung-gi-realizza-la-variant/ -->
 	<meta charset="UTF-8">
 	<title>So You Think You're A Marvel Fan?</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="public/styles/style.css">
 </head>
 <body>
