updating mobile styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="game-play hide-on-load">
+		<section class="game-play" id="game-play">
 			<div class="comic-backgroud-images">
 				<div class="comic-background image-1"></div>
 				<div class="comic-background image-2"></div>
